--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,9 @@ header, main, footer {
         padding-left: 0;
     }
 }
+
+@media only screen and (min-width : 600px) and (max-width : 992px) {
+    .top-nav .container .nav-wrapper .brand-logo {
+        padding-left: 150px;
+    }
+}
