--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .top-nav .container .nav-wrapper .brand-logo {
-    padding-left: 300px;
+    padding-left: 400px;
 }
 
 header, main, footer {
@@ -12,7 +12,7 @@ header, main, footer {
     }
 }
 
-@media only screen and (min-width : 600px) and (max-width : 992px) {
+@media only screen and (min-width : 600px) {
     .top-nav .container .nav-wrapper .brand-logo {
         padding-left: 150px;
     }
