--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ header, main, footer {
     }
 }
 
-@media only screen and (min-width : 600px) {
+@media only screen and (max-width : 600px) {
     .top-nav .container .nav-wrapper .brand-logo {
         padding-left: 150px;
     }
