--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .top-nav .container .nav-wrapper .brand-logo {
-    padding-left: 400px;
+    padding-left: 500px;
 }
 
 header, main, footer {
@@ -14,6 +14,12 @@ header, main, footer {
 
 @media only screen and (max-width : 600px) {
     .top-nav .container .nav-wrapper .brand-logo {
+        padding-left: 100px;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .top-nav .container .nav-wrapper .brand-logo { 
         padding-left: 150px;
     }
 }
