--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,12 @@ header, main, footer {
     padding-left: 300px;
 }
 
+nav ul li.active,
+nav ul li.hover {
+    background-color: #212121;
+}
+
+
 @media only screen and (max-width : 992px) {
     header, main, footer {
         padding-left: 0;
