--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ header, main, footer {
 
 nav ul li.active,
 nav ul li.hover {
-    background-color: #212121;
+    background-color: #0d0d0d;
 }
 
 
