--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ ul li:hover {
     background-color: #121212;
 }
 
+.about-page {
+    padding-top: 25px;
+}
 
 @media only screen and (max-width : 992px) {
     header, main, footer {
